[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Enemies/Bullets/BlastWeak.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Enemies/Boomers/Boomer.gd" type="Script" id=2]
[ext_resource path="res://Misc/HealthBar.gd" type="Script" id=3]
[ext_resource path="res://Sprites/enemy.png" type="Texture" id=4]
[ext_resource path="res://Sprites/bullet5.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float fade:hint_range(0.0, 1.0);

void fragment(){
	COLOR=texture(TEXTURE,UV);
	COLOR.rgb=vec3(1.0);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 8 )
shader_param/fade = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Charged"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BlastSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 50, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/BlastSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BlastSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/BlastSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/BlastSpawn:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Regular"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BlastSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/BlastSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Triple"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BlastSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/BlastSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/BlastSpawn:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 1.8, 2, 2.3, 2.5, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boomer" type="KinematicBody2D" groups=["hittables"]]
self_modulate = Color( 1, 0, 1, 1 )
collision_layer = 2
script = ExtResource( 2 )
blastScn = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 1, 1 )
texture = ExtResource( 4 )

[node name="BlastSpawn" type="Sprite" parent="Sprite"]
position = Vector2( 32, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )

[node name="CoverSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="HealthBar" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
z_index = -2
script = ExtResource( 3 )
size = 64

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Charged = SubResource( 2 )
anims/RESET = SubResource( 7 )
anims/Regular = SubResource( 3 )
anims/Triple = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_shoot_animation_finished"]
